@@ -1,15 +1,16 @@
 package edu.mit.compilers.optimizer;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.HashSet;
+import java.util.Deque;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
 
 import edu.mit.compilers.cfg.CBlock;
 import edu.mit.compilers.cfg.CMethod;
 
 public class CSE {
+    private static EBlock fullSet;
     private CSE() {}
 
     public static EBlock evalGen(CBlock codes) {
@@ -29,42 +30,38 @@ public class CSE {
         // 3. CBlock should provide a list for saving commands
         // 4. when elimination done, should delete/add backwards
         // initialization
+        fullSet = new EBlock();
         List<CBlock> blocks = method.getBlocks();
         List<EBlock> AEin = new ArrayList<>();
         List<EBlock> AEout = new ArrayList<>();
         List<EBlock> Eval = new ArrayList<>();
         List<EBlock> Kill = new ArrayList<>();
-        Set<Integer> changed = new HashSet<>();
+        Deque<Integer> changed = new ArrayDeque<>();
         int N = blocks.size();
         for (int i = 0; i < N; i++) {
             AEin.add(new EBlock());
             AEout.add(new EBlock());
             Eval.add(evalGen(blocks.get(0)));
             Kill.add(killGen(blocks.get(0)));
-            changed.add(i);
+            changed.addLast(i);
         }
-        changed.remove(0);
+        changed.removeFirst();
         // fix point algo
         while (!changed.isEmpty()) {
-            for (Iterator<Integer> iter = changed.iterator(); iter.hasNext();) {
-                int i = iter.next();
-                iter.remove();
+            int i = changed.removeFirst();
+            AEin.set(i, fullSet);
+            for (Integer p: blocks.get(i).getPred()) {
+                AEin.get(i).intersect(AEout.get(p));
+            }
 
-                // TODO: full set
-                AEin.set(i, E);
-                for (Integer p: blocks.get(i).getPred()) {
-                    AEin.get(i).intersect(AEout.get(p));
-                }
+            EBlock newAEout = new EBlock(AEin.get(i));
+            newAEout.subtract(Kill.get(i));
+            newAEout.union(Eval.get(i));
 
-                EBlock newAEout = new EBlock(AEin.get(i));
-                newAEout.subtract(Kill.get(i));
-                newAEout.union(Eval.get(i));
-
-                if (!newAEout.equals(AEout.get(i))) {
-                    AEout.set(i, newAEout);
-                    for (Integer s: blocks.get(i).getSucc()) {
-                        changed.add(s);
-                    }
+            if (!newAEout.equals(AEout.get(i))) {
+                AEout.set(i, newAEout);
+                for (Integer s: blocks.get(i).getSucc()) {
+                    changed.addLast(s);
                 }
             }
         }
